@@ -1,117 +1,101 @@
+<!-- factual information about lily !-->
 
-<! factual information about lily>
-
-<h1>LilyPond <font size=+2><em>is music printing</em></font></h1>
-<img align=right src="@IMAGES@fuga-fragment.png">
+<h1>LilyPond <font size="+2"><em>is music printing</em></font></h1>
+<img align="right" src="@IMAGES@fuga-fragment.png">
 
 LilyPond is an "automated engraving system."  It formats music
 beautifully and automatically, and has a friendly syntax for its input
-files. It is libre software (&lsquo;open source&rsquo;).
+files. It is Free Software (&lsquo;open source&rsquo;).
 
- 
 <ul>
-<li>
-Never heard of LilyPond? Read the <a href=../switch/>introduction</a>
+  <li>Never heard of LilyPond?
+    Read the <a href="../switch/">introduction</a>
+  <li>Questions?  Check out the <a href="features.html">feature list</a> or
+    read the <a href="faq.html">FAQ</a>.
+  <li>Interested in background information?  Read our <a
+							 href=automated-engraving/>essay on music engraving and computer
+    notation</a>, or look at our <a href=pubs.html>publications</a>.
 
-<li>
-Questions?  Check out the <a href=features.html>feature list</a> or
-read the <a href=faq.html>FAQ</a>.
-
-<li>
-Interested in background information?  Read our <a
-href=automated-engraving/>essay on music engraving and computer
-notation</a>, or look at our <a href=pubs.html>publications</a>.
-
-<li>
-LilyPond was written, conceived and directed by the 
-<a
-href=http://lilypond.org/doc/v1.8/Documentation/topdocs/out-www/AUTHORS.html>authors</a>.
-Helping hands are listed in the <a
-href=thanks.html>Acknowledgements</a>
-
+<li>LilyPond was written, conceived and directed by the <a href="doc/v1.8/Documentation/topdocs/out-www/AUTHORS.html">authors</a>.
+  Helping hands are listed in the <a href="thanks.html">Acknowledgements</a>
 </ul>
 
 <h2>Contact</h2>
 
-
 <ul>
-<li> Send  comments on these pages to <tt><a
-href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
-(mailing list <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
-search <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>) 
+  <li> Send  comments on these pages to <tt><a
+					       href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
+    (mailing list <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
+    search <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>) 
 
-
-<li> Learn about the latest releases by subscribing to <tt><a
-href="mailto:info-lilypond@gnu.org">info-lilypond@gnu.org</a></tt>
-(mailing list <a
-href="http://mail.gnu.org/mailman/listinfo/info-lilypond">
-info</a></tt>, search <a
-href="http://mail.gnu.org/archive/html/info-lilypond/">archive</a>)
+  <li> Learn about the latest releases by subscribing to <tt><a
+								href="mailto:info-lilypond@gnu.org">info-lilypond@gnu.org</a></tt>
+    (mailing list <a
+		     href="http://mail.gnu.org/mailman/listinfo/info-lilypond">
+      info</a></tt>, search <a
+			       href="http://mail.gnu.org/archive/html/info-lilypond/">archive</a>)
 
 <li> Send questions and comments on LilyPond to <tt><a
-href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a></tt>
-(mailing list
-<a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">
- info</a></tt>,
-search <a href="http://mail.gnu.org/archive/html/lilypond-user/">archive</a>) 
+						       href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a></tt>
+  (mailing list <a
+		   href="http://mail.gnu.org/mailman/listinfo/lilypond-user">
+    info</a></tt>, search <a
+			     href="http://mail.gnu.org/archive/html/lilypond-user/">archive</a>)
+<br><strong>important notice:</strong><a href="http://mail.gnu.org/archive/html/bug-lilypond/2004-03/msg00048.html">
+  only <strong>text/plain</strong> messages are allowed</a>.
 
 <li> Send bug reports  to <tt><a
-href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
-(mailing list
-<a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">
-info</a>,
-search <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>) 
-
+				 href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
+  (mailing list
+  <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">
+    info</a>,
+  search <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>)
+  <br><strong>important notice:</strong>
+  <a href="http://mail.gnu.org/archive/html/lilypond-user/2004-03/msg00111.html">
+    only <strong>text/plain</strong> messages are allowed</a>.
 
 <li> Contact the developers
-by subscribing to <tt><a
-href="mailto:lilypond-devel@gnu.org">lilypond-devel@gnu.org</a></tt>
-(mailing list 
-<a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">info</a>,
-search <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archive</a>)
+  by subscribing to <tt><a
+			   href="mailto:lilypond-devel@gnu.org">lilypond-devel@gnu.org</a></tt>
+  (mailing list 
+  <a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">info</a>,
+  search <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archive</a>)
 
 <li>
-For contacting the authors, see <a
-href=http://lilypond.org/doc/v1.8/Documentation/topdocs/out-www/AUTHORS.html>the
-author list</a>.
-(<em>Only contact the authors directly for strictly personal
-communication</em>)
+  For contacting the authors, see <a
+				     href="doc/v1.8/Documentation/topdocs/out-www/AUTHORS.html">the
+    author list</a>.
+  (<em>Only contact the authors directly for strictly personal
+    communication</em>)
 </ul>
 
-
-<br>
 <br>
 
-<img src=@IMAGES@floating.png align=right>
+<img src="@IMAGES@floating.png" align="right">
 
 <h2>Links</h2>
 
 LilyPond is part of the <a href="http://www.gnu.org/">GNU Project</a>.
 
-<br clear=all>
+<br clear="all">
 
 <a href="http://www.linuxaudiodev.org/">
-<img align=right src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
+  <img align=right src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
        alt="Linux Audio Developers Logo"></a>
 
 <p>
 
-The developers cooperate with the <a
-href="http://www.linuxdj.com/audio/lad/eventslt2003.php3"> Linux Audio
-Developers</a> group.
+  The developers cooperate with the <a
+				       href="http://www.linuxdj.com/audio/lad/eventslt2003.php3"> Linux Audio
+    Developers</a> group.
 
 <p><a
-href="http://www.gnu.org/software/guile">
-<img src=@IMAGES@guile-logo.jpeg align=right>
-</a>
+      href="http://www.gnu.org/software/guile">
+    <img src="@IMAGES@guile-logo.jpeg" align="right">
+  </a>
 
-LilyPond uses Project GNU's <a
-href="http://www.gnu.org/software/guile">GUILE</a> Scheme interpreter
-for extension.
-
-
-
+  LilyPond uses Project GNU's <a
+				 href="http://www.gnu.org/software/guile">GUILE</a> Scheme interpreter
+  for extension.
 
 <p>
-
-
